# iceweasel

./: .cron.yml  .editorconfig  .gitignore  .hgignore  .lando.ini  .lldbinit  .prettierignore  .taskcluster.yml  AGENTS.md  CLOBBER  Cargo.toml  build.gradle  client.mk  configure.py  eslint-rollouts.config.mjs  eslint-test-paths.config.mjs  mots.yaml  moz.build  moz.configure  package-lock.json  package.json  pyproject.toml  settings.gradle  stylelint-rollouts.config.js  substitute-local-geckoview.gradle
.cargo/: audit.toml  config.toml.in
.claude/: settings.json
accessible/: moz.build
browser/: build.mk
browser/components/shell/rust/shell_windows/: Cargo.toml
browser/components/shell/rust/shell_windows/src/: WindowsShellServiceRust.h  lib.rs  limited_access_features.rs  secondary_tiles.rs
caps/: BasePrincipal.cpp  BasePrincipal.h  ContentPrincipal.cpp  ContentPrincipal.h  ContentPrincipalJSONHandler.h  DomainPolicy.cpp  DomainPolicy.h  ExpandedPrincipal.cpp  ExpandedPrincipal.h  ExpandedPrincipalJSONHandler.h  NullPrincipal.cpp  NullPrincipal.h  NullPrincipalJSONHandler.h  OriginAttributes.cpp  OriginAttributes.h  OriginAttributesHashKey.h  PrincipalHashKey.h  PrincipalJSONHandler.h  SharedJSONHandler.h  SubsumedPrincipalJSONHandler.h  SystemPrincipal.cpp  SystemPrincipal.h  moz.build  nsJSPrincipals.cpp  nsJSPrincipals.h  nsScriptSecurityManager.cpp  nsScriptSecurityManager.h
chrome/: RegistryMessageUtils.h  moz.build  nsChromeProtocolHandler.cpp  nsChromeProtocolHandler.h  nsChromeRegistry.cpp  nsChromeRegistry.h  nsChromeRegistryChrome.cpp  nsChromeRegistryChrome.h  nsChromeRegistryContent.cpp
config/: Makefile.in  MozZipFile.py  check_js_msg_encoding.py  check_js_opcode.py  check_macroassembler_style.py  check_spidermonkey_style.py  check_vanilla_allocations.py  create_rc.py  gcc-stl-wrapper.template.h  milestone.txt  moz.build  msvc-stl-wrapper.template.h  nsinstall.c  pathsub.h  rules.mk  shlwapi-h-constant.decls.h  shlwapi-h-unicode.decls.h  shlwapi-h-wrapper.template.h  stl-headers.mozbuild  system-headers.mozbuild  windows-h-constant.decls.h  windows-h-unicode.decls.h  windows-h-wrapper.template.h
docs/: conf.py  config.yml
docshell/: moz.build
dom/: metrics.yaml  moz.build
editor/: moz.build
gfx/: moz.build
gfx/harfbuzz_glue/: Cargo.toml
gfx/harfbuzz_glue/src/: lib.rs
gfx/wgpu_bindings/: Cargo.toml  cbindgen.toml  moz.build  moz.yaml  wgpu.h
gfx/wgpu_bindings/src/: client.rs  server.rs
gfx/wr/: Cargo.toml  servo-tidy.toml
gfx/wr/examples/: Cargo.toml  alpha_perf.rs  animation.rs  basic.rs  blob.rs  document.rs  iframe.rs  image_resize.rs  multiwindow.rs  scrolling.rs  texture_cache_stress.rs  yuv.rs
gfx/wr/examples/common/: boilerplate.rs
gfx/wr/webrender/res/: ps_quad_gradient.glsl  ps_quad_repeat.glsl  ps_quad_textured.glsl
gfx/wr/webrender/src/: batch.rs  border.rs  box_shadow.rs  clip.rs  composite.rs  hit_test.rs  image_tiling.rs  intern.rs  lib.rs  picture.rs  prepare.rs  quad.rs  render_backend.rs  render_target.rs  render_task.rs  render_task_cache.rs  render_task_graph.rs  scene_builder_thread.rs  scene_building.rs  space.rs  spatial_tree.rs  surface.rs  util.rs
gfx/wr/webrender/src/device/: gl.rs
gfx/wr/webrender/src/invalidation/: cached_surface.rs  compare.rs  mod.rs  vert_buffer.rs
gfx/wr/webrender/src/pattern/: box_shadow.rs  mod.rs  repeat.rs
gfx/wr/webrender/src/prim_store/: borders.rs  image.rs  line_dec.rs  mod.rs  rectangle.rs  text_run.rs
gfx/wr/webrender/src/prim_store/gradient/: conic.rs  linear.rs  mod.rs  radial.rs
gfx/wr/webrender/src/renderer/: composite.rs  mod.rs  shade.rs  upload.rs
gfx/wr/webrender/src/tile_cache/: mod.rs  slice_builder.rs
gfx/wr/webrender_api/src/: display_item.rs  display_list.rs  font.rs  lib.rs  units.rs
gfx/wr/webrender_build/src/: shader_features.rs
gfx/wr/wr_glyph_rasterizer/: Cargo.toml
gfx/wr/wr_glyph_rasterizer/examples/: basic.rs
gfx/wr/wr_glyph_rasterizer/examples/common/: boilerplate.rs
gfx/wr/wr_glyph_rasterizer/src/platform/unix/: font.rs
gfx/wr/wrench/: Cargo.toml  android.txt
gfx/wr/wrench/invalidation/: clip_promotion.yaml  rounded_rect_intersect.yaml
gfx/wr/wrench/reftests/border/: reftest.list
gfx/wr/wrench/reftests/clip/: reftest.list
gfx/wr/wrench/reftests/filters/: blend-clipped.yaml  reftest.list
gfx/wr/wrench/reftests/gradient/: linear-hard-stop-45-degrees.yaml  reftest.list  tiling-linear-downscale-ref.yaml  tiling-linear-downscale.yaml
gfx/wr/wrench/reftests/scrolling/: fixed-position-scrolling-clip.yaml
gfx/wr/wrench/script/: reftest-analyzer.xhtml
gfx/wr/wrench/src/: angle.rs  composite.rs  egl.rs  main.rs  parse_function.rs  png.rs  reftest.rs  test_invalidation.rs  wrench.rs  yaml_frame_reader.rs
gfx/wr/wrshell/: Cargo.toml
gradle/: libs.versions.toml
hal/: Hal.cpp  Hal.h  HalIPCUtils.h  HalScreenConfiguration.h  HalSensor.h  HalTypes.h  HalWakeLock.cpp  HalWakeLock.h  HalWakeLockInternal.h  WindowIdentifier.cpp  WindowIdentifier.h  moz.build
image/: AnimationFrameBuffer.cpp  AnimationFrameBuffer.h  AnimationParams.h  AnimationSurfaceProvider.cpp  AnimationSurfaceProvider.h  AutoRestoreSVGState.h  BlobSurfaceProvider.cpp  BlobSurfaceProvider.h  ClippedImage.cpp  ClippedImage.h  DecodePool.cpp  DecodePool.h  DecodedSurfaceProvider.cpp  DecodedSurfaceProvider.h  Decoder.cpp  Decoder.h  DecoderFactory.cpp  DecoderFactory.h  DecoderFlags.h  Downscaler.cpp  Downscaler.h  DownscalingFilter.h  DynamicImage.cpp  DynamicImage.h  FetchDecodedImage.cpp  FetchDecodedImage.h  FrameAnimator.cpp  FrameAnimator.h  (+64 more)
image/rust/jxl/: Cargo.toml  moz.build
image/rust/jxl/src/: cms.rs  decoder.rs  ffi.rs  lib.rs
intl/app_collator_glue/: Cargo.toml
intl/app_collator_glue/src/: lib.rs
js/src/builtin/intl/collator_glue/: Cargo.toml  cbindgen.toml  moz.build
js/src/builtin/intl/collator_glue/src/: lib.rs
js/src/rust/shared/: Cargo.toml  lib.rs
netwerk/protocol/http/happy_eyeballs_glue/: Cargo.toml  HappyEyeballs.h  cbindgen.toml  moz.build
netwerk/protocol/http/happy_eyeballs_glue/src/: lib.rs  profiler.rs
(+20631 files in other folders)
