[workspace]
members = [
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
    "example-compositor/compositor",
]
resolver = "2"

[workspace.dependencies]
gleam = "0.15.1"
glean = "=67.1.0"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2

[patch.crates-io]
firefox-on-glean = { path = "fog" }
wr_malloc_size_of = { path = "wr_malloc_size_of" }
