[package]
name = "app_collator_glue"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MPL-2.0"
description = "Glue code for using icu_collator for Firefox UI (not Web!)"

[dependencies]
nsstring = { path = "../../xpcom/rust/nsstring" }
icu_collator = "2.1.1"
icu_locale_core = "2.1.1"
libsqlite3-sys = "0.35.0"
