[package]
name = "shell_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
log = "0.4"
nserror = { path = "../../../../../xpcom/rust/nserror" }
nsstring = { path = "../../../../../xpcom/rust/nsstring" }
sha2 = "0.10.2"
xpcom = { path = "../../../../../xpcom/rust/xpcom" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
moz_task = { path = "../../../../../xpcom/rust/moz_task" }

[dependencies.windows]
version = "0.62.0"
features = [
  "ApplicationModel",
  "Storage_Search",
  "UI_Shell",
  "UI_StartScreen",
]
